--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CST-338-PROJECT-2</string>
+    <string name="welcome_username">Welcome, [username]!</string>
+    <string name="reports">Reports</string>
+    <string name="events_Button">Events</string>
 </resources>
