Updated color scheme and added background to landing page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="events_Button">Events</string>
     <string name="logout_Button">Logout</string>
     <string name="vehicles">Vehicles</string>
-    <string name="bitmile_LP_Title">BitMile</string>
+    <string name="mileagem8_LP_Title">Mileage M8</string>
     <string name="admin_stuff">Admin Stuff</string>
 </resources>
